Thu Mar  9 08:05:08 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* slib.scm: Back-out change to software-type -- renamed
	slib:software-type to software-type, and leave it non-public.

Thu Mar  2 12:20:52 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* boot-9.scm: Drop unused definition of sfx function -- thanks
	Dirk Hermann!

Wed Mar  1 12:21:02 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* streams.scm: Doc patch from Richard Kim, using MIT Scheme as
	source of the numerous very short changes.

Sun Feb 13 18:03:19 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* slib.scm: Rename software-type to slib:software-type and make it 
	public.

	* r4rs.scm: Added documentation; largely cut and pasted from R4RS
	info pages.

Sun Feb 13 17:49:29 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* common-list.scm: Added documentation; largely cut and pasted
	from slib docs.

2000-02-11  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* format.scm (format): Reintroduce (define format format:format)
	so that the binding in the public interface of the module will be OK.

2000-01-30  Gary Houston  <ghouston@arglist.com>

	* boot-9.scm (find-and-link-dynamic-module): pass strings, not symbols,
	to string-append.

2000-01-29  Gary Houston  <ghouston@arglist.com>

	* expect.scm (expect): don't call char-ready? before expect-select,
	since select now checks port buffers itself.  don't bother to check
	the time first either, since expect-select does it.

Thu Jan 20 12:57:36 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* format.scm: Use (variable-set! (builtin-variable 'format)) to
	re-define format to be format:format (instead of just define,
	which interacts poorly with the module system).  Thanks to Shuji
	Narazaki for this change.

Tue Jan 11 10:49:22 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* boot-9.scm expect.scm, syncase.scm: Switch to new style
 	`simple-format' message strings: substitute ~A for %s, and ~S for
 	%S.
